--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -13,3 +13,9 @@ body {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
         monospace;
 }  */
+
+.message {
+    padding-bottom: 5px;
+    padding-top: 5px;
+    font-size: 1em;
+}
