--- a/frontend/src/styles/screens/HomeScreen.css
+++ b/frontend/src/styles/screens/HomeScreen.css
@@ -15,10 +15,103 @@
     top: 0;
     left: 0;
 } */
-
+/* 
 .home-form {
     margin-top: 18px;
     margin-bottom: 18px;
     margin-right: 10px;
     margin-left: 10px;
+} */
+
+.view-container {
+    position: relative;
+    display: flex;
+    height: 100vh;
+    width: 98vw; /* Use full viewport width */
+    overflow: hidden;
+    /* border: 3px solid blue; */
+}
+
+.view-content {
+    flex: 1;
+    /* padding: 20px; */
+    overflow: auto;
+    /* border: 3px solid red; */
+}
+
+.forms-container {
+    display: flex;
+    flex-direction: row; /* Side by side */
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    /* border: 3px solid red; */
+}
+
+.home-box {
+    position: fixed;
+    top: 0;
+    width: 57%;
+    height: 100%;
+    /* border: 3px solid blue; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+}
+
+.home-box-right {
+    right: 0;
+}
+
+.home-box-left {
+    left: 0;
+}
+
+.home-box-container {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    /* border: 3px solid red; */
+}
+
+.home-box-text-container {
+    z-index: 1;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 10px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    padding-right: 15px;
+    padding-left: 15px;
+    border-radius: 10px 100px / 120px;
+    background-color: #78c2ad;
+}
+
+.home-box-text-container p {
+    color: white;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+/* content inside box */
+.home-box-image-container {
+    width: 100%;
+}
+
+/* .home-box-image {
+    position: absolute;
+    top: 0;
+    right: 0;
+} */
+
+@media (max-width: 768px) {
+    .home-box {
+        display: none;
+    }
 }
