Create acton and reducers for list a users friends. searching for other users. Creating a Friend Request, deleting a friend, and showing notification upon success or failure.

--- a/frontend/src/styles/components/SideBar.css
+++ b/frontend/src/styles/components/SideBar.css
@@ -21,7 +21,7 @@
 
 .burger-container {
     position: fixed;
-    margin-left: 10px;
+    margin-left: 13px;
 }
 
 .burger-box {
@@ -123,6 +123,8 @@
 .upper-sidebar-content ul li span {
     margin-left: 5px;
 }
+
+/* ------------- Lower Section of Sidebar ------------------ */
 
 .lower-sidebar-content {
     margin-bottom: 25px;
