Created button in dashboard screen to open popup and show users any pending friend request or group invites. Action and reducers created for the api calls to retrive the two list. Freind request and group invites are located in seperate tabs in the popup. Action, reducers, and functionality was built for accepting a user friend request, Declining a user friend request, and Declining a group invitation. Accepting a group invitation still needs to be built but a placeholder is currently in place. Add functionality once the group screen is made.

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -5,7 +5,7 @@ body {
         "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale; */
-    background-color: #d8d8d8;
+    background-color: #f6f8fe;
     color: black;
 }
 
@@ -18,4 +18,13 @@ body {
     padding-bottom: 5px;
     padding-top: 5px;
     font-size: 1em;
+}
+
+.route-container {
+    padding: 10px 50px;
+}
+
+.screen-container {
+    /* border: 1px solid black; */
+    width: 100%;
 }
