fixed some bugs with the homescreen/loging/registration screen where the containers were not hugging the corners of the view. Fixed another bug where the sidebar would scroll if the content of the page was longer than the view height itself. Created API to get the debt based on the creditor id. Created another api that gets a list of groups a user is in and gets the total debt and credit they have. Continuing with the frontend, added how much a user is owed and how much they owe for a particular group in the groups screen. Began the groups screens. Redirects the user if they are not part of the group. Able to modify the group name too.

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -20,6 +20,11 @@ body {
     font-size: 1em;
 }
 
+.main-content {
+    /* flex-grow: 1; */
+    overflow-y: auto;
+}
+
 .route-container {
     padding: 10px 50px;
 }
@@ -27,4 +32,9 @@ body {
 .screen-container {
     /* border: 1px solid black; */
     width: 100%;
+}
+
+.home-screen {
+    padding: 0 20px;
+    height: 100%;
 }
