--- a/frontend/src/styles/components/SideBar.css
+++ b/frontend/src/styles/components/SideBar.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+/* .sidebar {
+    position: sticky;
+} */
+/* ---------------- Brand ------------------ */
+
 .brand-name-container {
     padding-left: 15px;
     margin-bottom: 35px;
@@ -25,6 +30,7 @@
 }
 
 .burger-box {
+    z-index: 1;
     margin-top: 15px;
     width: 60px;
     height: 40px;
