adjusted the sidebar to collapse on a larger screen size. I added isEvenlySplit and isTypeSettle to the backend models for expense. Adjust the recordPayment to set isTypeSettle to true. Adjusted update expense and create expense to have isEvenlySplity set to true or false depending on the user. Have added feature to evenly spit for update expense. Have created similar function to update for creating expense except the action and reducers are not created yet. Once down, the alerts will also be created.

--- a/frontend/src/styles/components/SideBar.css
+++ b/frontend/src/styles/components/SideBar.css
@@ -71,6 +71,7 @@
 }
 
 /* ----- animations--------- */
+
 /* clicked */
 .burger-bar.clicked:nth-child(1) {
     transform: rotate(45deg) translate(0.9em, 0.25em) scale(0.8);
@@ -135,8 +136,8 @@
 .lower-sidebar-content {
     margin-bottom: 25px;
 }
-
-@media (min-width: 576px) {
+/* 576px */
+@media (min-width: 768px) {
     .upper-sidebar-content {
         margin-top: 10px;
         width: 200px;
@@ -147,7 +148,7 @@
     }
 }
 
-@media (max-width: 576px) {
+@media (max-width: 768px) {
     .upper-sidebar-content {
         margin-top: 55px;
     }
