Finished creating action and reducers for creating expense. Added feature to delete expense. Added pagination to the expense list. Listed the debts and credits of the members of the groups.Need to add popup for sending funds to another user. Fixed bug where user group list wasnt refreshing upon new group creation.

--- a/frontend/src/styles/screens/GroupsScreens.css
+++ b/frontend/src/styles/screens/GroupsScreens.css
@@ -85,6 +85,10 @@
 }
 
 /* ---------------- ExpenseList.js ------------------ */
+.expense-list {
+    margin-bottom: 30px;
+}
+
 .expense-list .expense-list-col {
     overflow: auto;
 }
