continued with friends screen to settle with friend. The action and reducers were alread in place so i just used those. Then I modified the friends popup so that you can see a list of groups I am in but the friend is not in. This required a new api. Actions, reducers. The api for send an invite to a group was already in place so I creted action and reducers for both the frinds invited from the friends screen and from the individual group screen. A new api was created to search for users not in the group currently in and also not meembers. The accept group invitation button was finally implemented with all its actions, reducers and notifications. Fixed a bug where users who didnt have any friends, but more accurately wasn't in the FriendsList backend model, were'nt able to search for other users to add them as friends. fixed it by just creating an entry for them in the model if they didn't exist.

--- a/frontend/src/styles/screens/DashboardScreen.css
+++ b/frontend/src/styles/screens/DashboardScreen.css
@@ -6,3 +6,7 @@
     max-height: 250px; /* Adjust the max height as needed */
     overflow-y: auto;
 }
+
+/* .notification-red-dot {
+    color: rgb(185, 2, 2);
+} */
