--- a/frontend/src/styles/screens/DashboardScreen.css
+++ b/frontend/src/styles/screens/DashboardScreen.css
@@ -1,12 +1,50 @@
 /* ------------- PendingInvitesPopup.js ------------------ */
-.pending-invites-popup ul {
-}
-
 .scrollable-list {
     max-height: 250px; /* Adjust the max height as needed */
     overflow-y: auto;
 }
 
-/* .notification-red-dot {
-    color: rgb(185, 2, 2);
-} */
+/* ------------- FriendsSummary.js ------------------ */
+.dashboard-section-container {
+    margin-bottom: 30px;
+}
+
+.dashboard-section-box-container {
+    padding: 20px 10px;
+    margin-bottom: 12px;
+    /* border: 0.3px solid #c6c6c6; */
+    border-radius: 5px;
+    box-shadow: 0 1px 2px #c6c6c6;
+    background-color: white;
+}
+
+.dashboard-section-box-container-col {
+    height: 100%;
+    padding: 10px 50px;
+    /* border: 1px solid red; */
+}
+
+.dashboard-section-box-container-col .summary-box {
+    border-left: 1px solid #c6c6c6;
+    /* border-right: 1px solid #c6c6c6; */
+    /* border: 1px solid blue; */
+    padding: 0px 14px;
+}
+
+.summary-box-item {
+    border-bottom: 1px solid #c6c6c6;
+    padding: 10px 16px;
+}
+
+.show-more-button {
+    cursor: pointer;
+    text-align: center;
+    font-size: 14px;
+}
+
+@media (max-width: 768px) {
+    .dashboard-section-box-container-col {
+        border-left: none;
+        border-right: none;
+    }
+}
