--- a/frontend/src/styles/screens/GroupsScreens.css
+++ b/frontend/src/styles/screens/GroupsScreens.css
@@ -71,6 +71,16 @@
     /* padding: 8px 16px; */
 }
 
+.group-container {
+    position: relative;
+}
+
+.delete-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
 /* ---------------- IndividualGroupScreen.js ------------------ */
 .group-name-container h1 {
     padding-right: 10px;
@@ -131,4 +141,6 @@
     background-color: #f2f2f2; /* Light grey background */
     color: #999; /* Grey text color */
     pointer-events: none; /* Disable pointer events */
+    border: 4px solid #f2f2f2;
+    border-radius: 10px;
 }
