remove the google button functionality as some packages were updated for the current version of google. I added rerouting for users if they are not logged in. If users enter a page of the site that has no direct relation, then they get a 404 image. Commented out items and unused variables were removed from the frontend and the backend.

--- a/frontend/src/styles/components/LoginRegistrationForm.css
+++ b/frontend/src/styles/components/LoginRegistrationForm.css
@@ -6,7 +6,6 @@
 
 /* Welcome information */
 .login-registration-header {
-    /* margin-bottom: 50px; */
     text-align: center;
 }
 
@@ -33,15 +32,15 @@
 }
 
 .left-line {
-    margin-right: 10px; /* Space between line and text */
+    margin-right: 10px;
 }
 
 .right-line {
-    margin-left: 10px; /* Space between line and text */
+    margin-left: 10px;
 }
 
 .text {
-    padding: 0 10px; /* Space between text and lines */
+    padding: 0 10px;
 }
 
 /* Form*/
@@ -50,7 +49,6 @@
     margin: 10px 0;
     width: 70%;
     max-width: 400px;
-    /* border: 3px solid red; */
 }
 
 .move-home-box-link {
@@ -69,7 +67,6 @@
 /* Error */
 
 .login-registration-form .message {
-    /* padding-bottom: 50px; */
     width: 100%;
     border-radius: 21px;
     padding: 8px 0;
